study material div overlaping  issue fixed

--- a/src/app/components/activity-home/ecourse-file-manager/ecourse-list/ecourse-list.component.scss
+++ b/src/app/components/activity-home/ecourse-file-manager/ecourse-list/ecourse-list.component.scss
@@ -1,15 +1,15 @@
-.wrap-data {
+// .wrap-data {--removed by laxmi no need to add 
 
-  height: 440px;
-  overflow-y: scroll;
-  overflow-x: none;
+//   // height: 440px; 
+//   // overflow-y: scroll;
+//   // overflow-x: none;
 
-  ::-webkit-scrollbar {
-    display: block !important;
-    width: 7px;
-    height: 7px;
-  }
-}
+//   ::-webkit-scrollbar {
+//     display: block !important;
+//     width: 7px;
+//     height: 7px;
+//   }
+// }
 
 #addDiv {
   text-align: right;
